update faq and advanced_settings